--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "aws-amplify": "^2.2.2",
+    "prop-types": "^15.7.2",
+    "query-string": "^6.10.1",
+    "ra-data-json-server": "^3.2.0",
     "react": "^16.12.0",
+    "react-admin": "^3.2.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0"
   },
