update .env with production url

--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ REACT_APP_COGNITO_REGION=us-east-1
 REACT_APP_COGNITO_POOL_ID=us-east-1_oDBCRdBh7
 REACT_APP_COGNITO_CLIENT_ID=1qm3h1kns1u8vvqflep8i5qkdc
 REACT_APP_COGNITO_CLIENT_DOMAIN=lapiedad-backup-app
-REACT_APP_COGNITO_CALLBACK=http://localhost:3000
+REACT_APP_COGNITO_CALLBACK=https://la-piedad-backup-manager.my.to
