Auth and new endpoint

--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ REACT_APP_COGNITO_POOL_ID=us-east-1_oDBCRdBh7
 REACT_APP_COGNITO_CLIENT_ID=1qm3h1kns1u8vvqflep8i5qkdc
 REACT_APP_COGNITO_CLIENT_DOMAIN=lapiedad-backup-app
 REACT_APP_COGNITO_CALLBACK=https://la-piedad-backup-manager.my.to
-REACT_APP_API_URL=https://58bnpw06gh.execute-api.us-east-1.amazonaws.com/Prod
+REACT_APP_API_URL=https://jqau71xz1m.execute-api.us-east-1.amazonaws.com/Prod
